istio/service_entry_oneagent.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - tno85405.live.dynatrace.com
  - sg-ap-southeast-2-13-54-211-156-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-52-62-137-27-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-13-54-250-193-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-52-65-42-73-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-13-54-1-137-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-13-55-188-30-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-52-63-8-98-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-52-64-33-57-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-13-238-8-94-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-13-54-0-221-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-13-55-162-49-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-13-55-101-144-prod-ap-southeast-5-sydney.live.ruxit.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: HTTPS
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - tno85405.live.dynatrace.com
  - sg-ap-southeast-2-13-54-211-156-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-52-62-137-27-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-13-54-250-193-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-52-65-42-73-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-13-54-1-137-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-13-55-188-30-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-52-63-8-98-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-52-64-33-57-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-13-238-8-94-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-13-54-0-221-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-13-55-162-49-prod-ap-southeast-5-sydney.live.ruxit.com
  - sg-ap-southeast-2-13-55-101-144-prod-ap-southeast-5-sydney.live.ruxit.com 
  tls:
  - match:
    - port: 443
      sni_hosts:
      - tno85405.live.dynatrace.com
    route:
    - destination:
        host: tno85405.live.dynatrace.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-ap-southeast-2-13-54-211-156-prod-ap-southeast-5-sydney.live.ruxit.com
    route:
    - destination:
        host: sg-ap-southeast-2-13-54-211-156-prod-ap-southeast-5-sydney.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-ap-southeast-2-52-62-137-27-prod-ap-southeast-5-sydney.live.ruxit.com
    route:
    - destination:
        host: sg-ap-southeast-2-52-62-137-27-prod-ap-southeast-5-sydney.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-ap-southeast-2-13-54-250-193-prod-ap-southeast-5-sydney.live.ruxit.com
    route:
    - destination:
        host: sg-ap-southeast-2-13-54-250-193-prod-ap-southeast-5-sydney.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-ap-southeast-2-52-65-42-73-prod-ap-southeast-5-sydney.live.ruxit.com
    route:
    - destination:
        host: sg-ap-southeast-2-52-65-42-73-prod-ap-southeast-5-sydney.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-ap-southeast-2-13-54-1-137-prod-ap-southeast-5-sydney.live.ruxit.com
    route:
    - destination:
        host: sg-ap-southeast-2-13-54-1-137-prod-ap-southeast-5-sydney.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-ap-southeast-2-13-55-188-30-prod-ap-southeast-5-sydney.live.ruxit.com
    route:
    - destination:
        host: sg-ap-southeast-2-13-55-188-30-prod-ap-southeast-5-sydney.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-ap-southeast-2-52-63-8-98-prod-ap-southeast-5-sydney.live.ruxit.com
    route:
    - destination:
        host: sg-ap-southeast-2-52-63-8-98-prod-ap-southeast-5-sydney.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-ap-southeast-2-52-64-33-57-prod-ap-southeast-5-sydney.live.ruxit.com
    route:
    - destination:
        host: sg-ap-southeast-2-52-64-33-57-prod-ap-southeast-5-sydney.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-ap-southeast-2-13-238-8-94-prod-ap-southeast-5-sydney.live.ruxit.com
    route:
    - destination:
        host: sg-ap-southeast-2-13-238-8-94-prod-ap-southeast-5-sydney.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-ap-southeast-2-13-54-0-221-prod-ap-southeast-5-sydney.live.ruxit.com
    route:
    - destination:
        host: sg-ap-southeast-2-13-54-0-221-prod-ap-southeast-5-sydney.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-ap-southeast-2-13-55-162-49-prod-ap-southeast-5-sydney.live.ruxit.com
    route:
    - destination:
        host: sg-ap-southeast-2-13-55-162-49-prod-ap-southeast-5-sydney.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-ap-southeast-2-13-55-101-144-prod-ap-southeast-5-sydney.live.ruxit.com
    route:
    - destination:
        host: sg-ap-southeast-2-13-55-101-144-prod-ap-southeast-5-sydney.live.ruxit.com
        port:
          number: 443
          name: HTTPS
